# VoltaSplat

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  build_and_test.yml  cd.yml
benchmarks/: metrics.json  run_benchmarks.py
csrc/: _C.cp313-win_amd64.exp  _C.cp313-win_amd64.lib  backward.cu  bindings.cpp  forward.cu  rasterizer.cu  sort.cu
csrc/include/: camera.cuh  gaussian.cuh  rasterizer.cuh  utils.cuh
docker/: Dockerfile  docker-compose.yml
docs/: MATH_SPEC.md
references/: CUB_RADIX_SORT_SPEC.md
tests/: test_backward.py  test_forward.py
voltasplat/: _C.cp313-win_amd64.pyd  cameras.py  losses.py  modules.py
