[project]
name = "voltasplat"
version = "0.1.0"
description = "A high-performance PyTorch 3D Gaussian Splatting Engine with Custom CUDA kernels."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchvision",
    "torchaudio",
    "pytest",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["voltasplat"]
